--- a/about/a&a/index.html
+++ b/about/a&a/index.html
@@ -64,7 +64,8 @@
         <div class="footerRow">
             <a style="color: #daffd6;" href="/about/index.html" class="pointer-hover"><h3 class="light-bg-hover">About Me</h3></a>
             <p class="portfolioLink"><a class="pointer-hover" href="#top">Awards & Achievements</a></p>
-            <p class="portfolioLink"><a class="pointer-hover" href="#">Page</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/hobbies/index.html">Hobbies</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/psp/index.html">Post Secondary Plan</a></p>
         </div>
         <div class="footerRow socials">
             <a class="pointer-hover" href="https://www.daymian.xyz" target="_blank"><img class="social-icon"
