--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="content">
         <h1 class="greetings light-bg-hover">Hello!</h1>
-        <h3 class="subgreetings light-bg-hover">Im Daymian</h3>
+        <h3 class="subgreetings light-bg-hover">I'm Daymian</h3>
         <a href="#body" class="subgreetings pointer-hover two" style="cursor: none;">&#8595;</a>
         <br>
         <div id="body">
