--- a/404.html
+++ b/404.html
@@ -1,191 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Icons/globe.png" type="image/x-icon">
     <title>404 Not Found</title>
-    
+
     <style>
-        @import url('/fonts/font.css');
+        @import url('/fonts/stylesheet.css');
+
         body {
-            font-family: 'forza';
-            padding: 50px;
-            background: linear-gradient(135deg, #000000, #434343);
-            color: white;
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial';
+            background-color: #000000;
+            color: #FFFFFF;
             overflow: hidden;
-            animation: backgroundShift 10s infinite alternate;
         }
 
-        @keyframes backgroundShift {
-            0% { background: linear-gradient(135deg, #000000, #434343); }
-            100% { background: linear-gradient(135deg, #434343, #000000); }
-        }
-
-        ::selection {
-            color: black;
-            background-color: white;
-        }
-
-        .header-container {
-            text-align: center;
-            animation: fadeIn 2s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
+        .fof {
+            font-family: 'Timetwist-Italic';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -70%);
+            z-index: 1;
+            color: rgb(0, 0, 0);
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.5), 0 0 40px rgba(255, 255, 255, 0.5), 0 0 50px rgba(255, 255, 255, 0.5), 0 0 60px rgba(255, 255, 255, 0.5), -1px -1px #000000;
+            font-size: 20em;
         }
 
         .header {
-            font-size: 30px;
-            background: linear-gradient(90deg, antiquewhite, #ffcccb);
-            color: #000000;
+            position: absolute;
+            top: 45%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2;
+            font-size: 15em;
+        }
+
+        .header-container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             text-align: center;
-            display: inline-block;
-            padding: 0 10px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-            animation: pulse 3s infinite;
+            width: 100%;
         }
 
-        @keyframes pulse {
-            0%, 100% { transform: scale(1); }
-            50% { transform: scale(1.1); }
+        .fof,
+        .header {
+            margin: 0;
         }
 
-        h2 {
-            font-size: 20px;
-            font-weight: 300;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+        .button {
+            position: absolute;
+            top: 80%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 3;
+            background-color: #000000;
+            color: #FFFFFF;
+            border: none;
+            padding: 20px 40px;
+            font-size: 2em;
+            cursor: pointer;
+            font-family: 'Times New Roman';
+            border: #FFFFFF 2px solid;
+            text-decoration: underline;
         }
 
-        a {
-            color: white;
-            text-decoration: none;
-            position: relative;
+        .clock {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            color: #FFFFFF;
+            font-family: 'Times New Roman';
+            font-size: 1.5em;
+            z-index: 4;
         }
 
-        a:hover {
-            background-color: white;
-            color: black;
-            transition: all 0.3s ease-in-out;
-        }
-
-        .text {
-            margin-left: 18em;
-            margin-left: 0;
-            animation: slideIn 1.5s ease-in-out;
-        }
-
-        @keyframes slideIn {
-            from { transform: translateX(-100%); opacity: 0; }
-            to { transform: translateX(0); opacity: 1); }
-        }
-
-        @media (max-width: 768px) {
-            body {
-                padding: 2em 1em;
+        @media (max-width: 450px) {
+            .fof {
+                font-size: 10em;
+                transform: translate(-50%, -60%);
             }
+
             .header {
-                font-size: 24px;
-                padding: 0 5px;
+                font-size: 5em;
+                top: 40%;
             }
-            h2 {
-                font-size: 18px;
+
+            .button {
+                font-size: 1.5em;
+                padding: 15px 30px;
+                top: 75%;
             }
-            .text {
-                margin-left: 0;
-            }
-        }
-        @media (max-width: 480px) {
-            body {
-                padding: 1em 0.5em;
-            }
-            .header {
-                font-size: 20px;
-                padding: 0 2px;
-            }
-            h2 {
-                font-size: 16px;
-            }
-            .text {
-                margin-left: 0;
+
+            .clock {
+                font-size: 1em;
             }
         }
     </style>
 </head>
+
 <body>
+    <div class="clock" id="clock"></div>
     <div class="header-container">
+        <h1 class="fof">404</h1>
         <h2 class="header">d4ym1an.exe</h2>
     </div>
-    <div class="text">
-        <h2>An error has occurred. To continue:</h2><br>
-        <h2><a id="bouncingLink" href="index.html">Click Here</a> to return</h2>
-        <h2>Error: 0E : 016F : BFF9B3D4</h2>
-    </div>
+    <button class="button" onclick="window.location.href='/'">Go Home</button>
     <canvas id="backgroundCanvas"></canvas>
+    <script>
+        function updateClock() {
+            const clockElement = document.getElementById('clock');
+            const now = new Date();
+            const day = String(now.getDate()).padStart(2, '0');
+            const month = String(now.getMonth() + 1).padStart(2, '0'); // Months are 0-based
+            const year = now.getFullYear();
+            const date = `${day} - ${month} - ${year}`; // Format: DD - MM - YYYY
+            const time = now.toLocaleTimeString('en-GB', { hour: '2-digit', minute: '2-digit', hour12: false }); // Exclude seconds
+            clockElement.textContent = `${date} ${time}`;
+        }
+        setInterval(updateClock, 1000);
+        updateClock();
+    </script>
 </body>
-<script>
-    // Remove "press any key to continue" feature
-    // Add bouncing effect for the "Click Here to return" link
-    const link = document.getElementById('bouncingLink');
-    let x = 100, y = 100;
-    let dx = 2, dy = 2;
 
-    function moveLink() {
-        const linkRect = link.getBoundingClientRect();
-        const containerWidth = window.innerWidth;
-        const containerHeight = window.innerHeight;
-
-        if (x + linkRect.width >= containerWidth || x <= 0) dx *= -1;
-        if (y + linkRect.height >= containerHeight || y <= 0) dy *= -1;
-
-        x += dx;
-        y += dy;
-
-        link.style.position = 'absolute';
-        link.style.left = `${x}px`;
-        link.style.top = `${y}px`;
-
-        requestAnimationFrame(moveLink);
-    }
-
-    moveLink();
-
-    // Animated background with canvas
-    const canvas = document.getElementById('backgroundCanvas');
-    const ctx = canvas.getContext('2d');
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-
-    const particles = [];
-    for (let i = 0; i < 100; i++) {
-        particles.push({
-            x: Math.random() * canvas.width,
-            y: Math.random() * canvas.height,
-            radius: Math.random() * 3 + 1,
-            dx: Math.random() * 2 - 1,
-            dy: Math.random() * 2 - 1
-        });
-    }
-
-    function drawParticles() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        particles.forEach(p => {
-            ctx.beginPath();
-            ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-            ctx.fillStyle = 'white';
-            ctx.fill();
-            p.x += p.dx;
-            p.y += p.dy;
-
-            if (p.x < 0 || p.x > canvas.width) p.dx *= -1;
-            if (p.y < 0 || p.y > canvas.height) p.dy *= -1;
-        });
-        requestAnimationFrame(drawParticles);
-    }
-
-    drawParticles();
-</script>
 </html>
