--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="About Daymian J. Madrigal Vasquez - A web developer with a passion for crafting interactive, visually engaging web experiences.">
-    <link rel="icon" type="image/png" href="/imgs/djCrownOfThorns.png">
+    <link rel="icon" type="image/png" href="/imgs/CrownOfThorns.png">
     <title>daymian // about</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -26,31 +26,28 @@
     <div class="mainContent">
         <img class="profilePic" src="/imgs/daymian.jpg" alt="Daymian J. Madrigal Vasquez">
         <div class="aboutMeText">
-            <h1>A little bit bout' myself!</h1>
-            <p>Creative Web Developer | Building Beautiful & Intuitive Digital Experiences</p>
-            <p>Hi there! I'm Daymian J. Madrigal Vasquez, a passionate web developer based in sunny California, USA. At
-                just 17 years old, I’ve already immersed myself in the world of web development, transforming lines of
-                code into sleek, interactive, and user-friendly digital experiences.</p>
-            <p>I specialize in crafting websites that look great and feel amazing to use. Whether you're looking for a
-                modern portfolio, a dynamic landing page, or a full-featured web app, I'm here to bring your vision to
-                life with clean code and creative design.</p>
-            <h3>🔧 My Skills Include:</h3>
+            <h1>Who Am I? Glad You Asked!</h1>
+            <p>Web Wizard | Turning Coffee & Code into Cool Websites</p>
+            <p>Hey there! I'm Daymian J. Madrigal Vasquez, a <span id="age"></span>-year-old web developer from sunny California. I take
+                boring lines of code and turn them into sleek, interactive, and downright awesome websites.</p>
+            <p>Need a portfolio that wows, a landing page that converts, or a web site that just works? I’ve got you
+                covered with clean code, creative design, and a sprinkle of magic.</p>
+            <h3>🔧 Skills That Pay the "Bills":</h3>
             <ul>
-                <li>HTML, CSS, JavaScript</li>
-                <li>Responsive design & mobile-first development</li>
-                <li>Web animations & interactive UI components</li>
+                <li>HTML, CSS, JavaScript (the holy trinity of web dev)</li>
+                <li>Responsive designs that look good on any screen</li>
+                <li>Animations that make your site pop</li>
             </ul>
-            <h3>💡 What You Can Expect:</h3>
+            <h3>💡 Why Work With Me?</h3>
             <ul>
-                <li>Friendly and clear communication</li>
-                <li>Quick turnarounds and reliable delivery</li>
-                <li>Pixel-perfect design implementation</li>
-                <li>Focus on performance and accessibility</li>
-                <li>A developer who cares about user experience</li>
+                <li>Clear and friendly communication (no tech jargon, promise!)</li>
+                <li>Fast turnarounds without cutting corners</li>
+                <li>Pixel-perfect designs that don’t just look good—they feel good</li>
+                <li>Focus on speed, accessibility, and user experience</li>
             </ul>
-            <p>Whether you're starting from scratch or need a skilled developer to jump into an existing project, I’m
-                ready to help you build something awesome.</p>
-            <p>Let’s connect and turn your idea into something beautiful ✨</p>
+            <p>Whether you’re starting fresh or need a pro to jump in and save the day, I’m here to help. Let’s build
+                something awesome together!</p>
+            <p>Ready to make your idea a reality? Let’s chat! 🚀</p>
         </div>
     </div>
     <div class="hover-buttonsBackground">
@@ -62,7 +59,7 @@
                 </div>
                 <div class="buttonTwoSpacing">
                     <a alt="Button 2" class="b2 hover-button pointer-hover" href="/about/hobbies/index.html">HOBBIES</a>
-                    <a alt="Button 3" class="b3 hover-button pointer-hover">POST SECONDARY PLAN</a>
+                    <a alt="Button 3" class="b3 hover-button pointer-hover" href="/about/psp/index.html">POST SECONDARY PLAN</a>
                 </div>
             </div>
         </div>
@@ -74,13 +71,14 @@
         </div>
         <div class="footerRow">
             <h3 class="light-bg-hover">Portfolio</h3>
-            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/index.html" target="_blank">About ME</a></p>
             <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
         </div>
         <div class="footerRow">
-            <h3 class="light-bg-hover">About Me</h3>
-            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
-            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
+            <a style="color: #daffd6;" href="/about/index.html" class="pointer-hover"><h3 class="light-bg-hover">About Me</h3></a>
+            <p class="portfolioLink"><a class="pointer-hover" href="#top">Awards & Achievements</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/hobbies/index.html">Hobbies</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/psp/index.html">Post Secondary Plan</a></p>
         </div>
         <div class="footerRow socials">
             <a class="pointer-hover" href="https://www.daymian.xyz" target="_blank"><img class="social-icon"
@@ -98,6 +96,7 @@
 
     <script src="/scripts/sidebar.js"></script>
     <script src="/scripts/cursor.js"></script>
+    <script src="/scripts/age.js"></script>
 </body>
 
 </html>
