--- a/about/psp/index.html
+++ b/about/psp/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>daymian // post secondary plan</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
+    <div id="sidebar" class="sidebar">
+        <button id="closeSidebar" class="close-btn pointer-hover">×</button>
+        <a href="/index.html" class="sidebar-link pointer-hover">Home</a>
+        <a href="/about/index.html" class="sidebar-link pointer-hover">About Me</a>
+        <a href="/index.html#projects" class="sidebar-link pointer-hover">Projects</a>
+        <a href="/index.html#contact" class="sidebar-link pointer-hover">Contact</a>
+    </div>
+
+    <header>
+        <h1>Post Secondary Plan</h1>
+    </header>
+
+    <button id="openSidebar" class="open-btn pointer-hover">☰</button>
+    <div class="text">
+        <section class="mainSection"> 
+            <p>My post-secondary plan involves initially enrolling in a community college to build a strong academic
+                foundation and gain valuable experience (and maybe learn how to survive on instant noodles). Afterward,
+                I
+                intend to transfer to a prestigious institution such as Louisiana State University (LSU) or another
+                reputable university to further my education. During this time, I aim to balance my studies with
+                part-time
+                work opportunities, ideally collaborating with you or another esteemed employer, to gain practical
+                experience and enhance my professional skills (and, of course, to fund my coffee addiction).</p>
+        </section>
+        <section class="career">
+            <h2>Career Aspirations</h2>
+            <p>My ultimate career aspiration is to contribute to the gaming industry by working at renowned companies
+                such
+                as Riot Games or Valve. I am passionate about being part of innovative teams that develop groundbreaking
+                projects and create immersive gaming experiences for players worldwide (and maybe sneak in a few Easter
+                eggs
+                for fun).</p>
+        </section>
+    </div>
+    <div class="footer">
+        <div class="footerRow">
+            <h3 class="light-bg-hover">Contact</h3>
+            <p>Email: business@daymian.xyz</p>
+        </div>
+        <div class="footerRow">
+            <h3 class="light-bg-hover">Portfolio</h3>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/index.html" target="_blank">About ME</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
+        </div>
+        <div class="footerRow">
+            <a style="color: #daffd6;" href="/about/index.html" class="pointer-hover"><h3 class="light-bg-hover">About Me</h3></a>
+            <p class="portfolioLink"><a class="pointer-hover" href="#top">Awards & Achievements</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/hobbies/index.html">Hobbies</a></p>
+            <p class="portfolioLink"><a class="pointer-hover" href="/about/psp/index.html">Post Secondary Plan</a></p>
+        </div>
+        <div class="footerRow socials">
+            <a class="pointer-hover" href="https://www.daymian.xyz" target="_blank"><img class="social-icon"
+                    src="/imgs/icons/globe.svg"></a>
+            <a class="pointer-hover" href="https://github.com/daymianjmv" target="_blank"><img class="social-icon"
+                    src="/imgs/icons/github.svg"></a>
+            <a class="pointer-hover" href="https://github.com/d4ym1an" target="_blank"><img class="social-icon"
+                    src="/imgs/icons/github2.svg"></a>
+            <a class="pointer-hover" href="https://www.upwork.com/freelancers/~01bce3362aa859dc2d" target="_blank"><img
+                    class="social-icon" src="/imgs/icons/upwork.svg"></a>
+            <a class="pointer-hover" href="https://www.linkedin.com/in/daymian/" target="_blank"><img
+                    class="social-icon" src="/imgs/icons/linkedin.svg"></a>
+        </div>
+    </div>
+
+    <script src="/scripts/cursor.js"></script>
+    <script src="/scripts/sidebar.js"></script>
 </body>
+
 </html>
