--- a/about/hobbies/index.html
+++ b/about/hobbies/index.html
@@ -83,9 +83,9 @@
                 few memes shared in the process).</p>
             <p>Here are a few of my websites that I have made</p>
             <ul>
-                <li><a class="pointer-hover" href="https://daymian-flow.netlify.app/">daymian-flow.netlify.app</a></li>
-                <li><a class="pointer-hover" href="https://dsftd.daymian.xyz">dsftd.daymian.xyz</a></li>
-                <li><a class="pointer-hover" href="https://kirka-css.daymian.xyz">kirka-css.daymian.xyz</a></li>
+                <li><a class="pointer-hover" href="https://daymian-flow.netlify.app/" target="_blank">daymian-flow.netlify.app</a></li>
+                <li><a class="pointer-hover" href="https://drift.daymian.xyz" target="_blank">dsftd.daymian.xyz</a></li>
+                <li><a class="pointer-hover" href="https://css.daymian.xyz" target="_blank">css.daymian.xyz</a></li>
             </ul>
         </div>
         <div class="twoImg">
