--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <button id="closeSidebar" class="close-btn pointer-hover">×</button>
         <a href="/index.html" class="here sidebar-link pointer-hover">Home<br> <span>you're already here!</span></a>
         <a href="/about/index.html" class="sidebar-link pointer-hover">About Me</a>
-        <a href="#projects" class="sidebar-link pointer-hover">Projects</a>
-        <a href="#contact" class="sidebar-link pointer-hover">Contact</a>
+        <a href="/projects/index.html" class="sidebar-link pointer-hover">Projects</a>
+        <a href="/contact/index.html" class="sidebar-link pointer-hover">Contact</a>
     </div>
     <button id="openSidebar" class="open-btn pointer-hover">☰</button>
 
@@ -69,7 +69,7 @@
             </div>
             <div class="buttons">
                 <a class="button pointer-hover light-bg-hover" href="/about/index.html">About Me</a>
-                <a class="button pointer-hover light-bg-hover">Projects</a>
+                <a class="button pointer-hover light-bg-hover" href="/projects/index.html">Projects</a>
             </div>
             <div class="SiteVersionCenter">
                 <div class="siteVersion">
@@ -90,14 +90,15 @@
                     <p>Email: business@daymian.xyz</p>
                 </div>
                 <div class="footerRow">
-                    <h3 class="light-bg-hover">Portfolio</h3>
-                    <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
-                    <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
+                    <a href="/projects/index.html" style="color: #daffd6;"><h3 class="light-bg-hover">Portfolio</h3></a>
+                    <p class="portfolioLink"><a class="pointer-hover" href="/projects/index.html#resume" target="_blank">Resume</a></p>
+                    <p class="portfolioLink"><a class="pointer-hover" href="/projects/index.html#projects" target="_blank">Projects</a></p>
                 </div>
                 <div class="footerRow">
-                    <h3 class="light-bg-hover">About Me</h3>
-                    <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
-                    <p class="portfolioLink"><a class="pointer-hover" href="#" target="_blank">Page</a></p>
+                    <a style="color: #daffd6;" href="/about/index.html" class="pointer-hover"><h3 class="light-bg-hover">About Me</h3></a>
+                    <p class="portfolioLink"><a class="pointer-hover" href="#top">Awards & Achievements</a></p>
+                    <p class="portfolioLink"><a class="pointer-hover" href="/about/hobbies/index.html">Hobbies</a></p>
+                    <p class="portfolioLink"><a class="pointer-hover" href="/about/psp/index.html">Post Secondary Plan</a></p>
                 </div>
                 <div class="footerRow socials">
                     <a class="pointer-hover" href="https://www.daymian.xyz" target="_blank"><img class="social-icon"
@@ -113,7 +114,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
     <script src="/scripts/cursor.js"></script>
